@@ -79,11 +79,15 @@ Fixes that could be postponed after the first Qt4 release
     http://api.kde.org/4.10-api/kdelibs-apidocs/interfaces/ktexteditor/html/kte_port_to_kde4.html
     - a hack is in place which works
 
+- printing a text document needs fixing
+    - hack is in place, it works
+
+
 Features needs re-implementation at Qt4 port
 =======
 - dbus integration for documents (used to be dcop bindings for documents)
 
-- printing a text document needs fixing
+
 
 Fixes needed for the first release candidate of the Qt4 port
 =======
@@ -118,8 +122,6 @@ Fixes needed for the first release candidate of the Qt4 port
 
 - loading C code to PIC fails
     - apparently when using a project, the PIC gets recognized and uploading works
-
-- when editing source code, many nonexitent signals are used in the code
 
 - cannot compile code for PIC, because SDCC complains about the PIC identifier
     - pic16f84 works; others are not clear
